# millenium-falcon-challenge

./: Dockerfile  README.md  pyproject.toml
mfc/: .gitignore  cli.py  models.py  routes.py  server.py  solve.py  state.py
