[tool.poetry]
name = "mfc"
version = "0.1.0"
description = "Developer Technical Test @ Dataiku"
authors = ["Raymond"]
readme = "README.md"
packages = [{include = "mfc"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.7.0"
rich = "^13.0.0"
pydantic = "^1.10.4"
flask = "^2.2.2"
flask-cors = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mfc = "mfc.cli:app"